# stack-templates

./: .gitignore  Makefile  README.md  TODO.txt  cabal.hsfiles  cabal.project  default.hsfiles  htmx.hsfiles  release.nix  shell.nix  simple.hsfiles  stack.yaml
templation/: .ghci  LICENSE  README.md  bb.edn  hie.yaml  package.yaml  templation.cabal
templation/app/: Main.hs
templation/src/: Templation.hs
templation/src/Templation/: Cmd.hs  Git.hs  Hsfiles.hs  Init.hs  Store.hs
templation/test/: DemoSpec.hs  DocTestSpec.hs  Main.hs
