cabal-version:  3.6
name:           templation
version:        0.2.0.0
description:    Create and modify stack templates
homepage:       https://github.com/grmble/stack-templates#readme
bug-reports:    https://github.com/grmble/stack-templates/issues
author:         Juergen Gmeiner
maintainer:     spamless.juergen@gmail.com
copyright:      (c) 2019,2020,2023 Juergen Gmeiner
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/grmble/stack-templates

common deps
  build-depends:
    , base >=4.16.4 && <5
    , bytestring
    , cmdargs
    , directory
    , filepath
    , req
    , shake
    , text
    , unix-compat
  default-language: GHC2021
  ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

library
  import: deps
  exposed-modules:
    , Templation.Cmd
    , Templation.Git
    , Templation.Store
  hs-source-dirs:
      src

executable templation
  import: deps
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
    , templation
